# personal_tools

./: bash_rc_stuff.sh  common_procedures.sh
scripts/: add_shebang_recursively.sh  aliases.sh  auto_complete.py  capture_and_prev.sh  common_procedures.sh  install_ros.sh  make_catkin_worspace.sh
scripts/custom_msgs_pkg/msg/: NavigatorStatus.msg  WaypointMsg.msg
scripts/python3_pub/: 3rdPartyLibraries.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  package.xml
scripts/python3_pub/scripts/: test.py
scripts/python3_pub/src/: temperature_sensor.py  temperature_sensor_node.py
scripts/standard_rospy_pkg/: CMakeLists.txt  package.xml
scripts/standard_rospy_pkg/scripts/: node.py  node.py.save
scripts/template_custom_msgs_pkg/: CMakeLists.txt  package.xml
scripts/template_custom_msgs_pkg/msg/: GpsPath.msg  MissionMsg.msg
text_files/: AWS  C++  CAN  auditctl  docker  git_commands  git_commands.save  git_commands.txt  intro  manim  markdown  networking  networking.txt  python_scripting  ros  ros2  ros_service  system_administration  terminator  udev_rules  vim  vscode  vscode.txt.save
