<?xml version="1.0"?>
<package format="2">
  <name>asv_temperature_sensor</name>
  <version>0.0.0</version>
  <description>The asv_temperature_sensor package</description>

  <maintainer email="daniel.ruiz@chironix.com">sekiro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
